# pyautox

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
autoguix/: __init__.py
autoguix/backends/: __init__.py  macos_backend.py
autoguix/core/: __init__.py  automation_core.py  backend_base.py  types.py
examples/: basic_demo.py
pyautox/: __init__.py
pyautox/backends/: __init__.py  macos_backend.py
pyautox/core/: __init__.py  automation_core.py  backend_base.py  types.py
tests/: test_core.py  test_macos_backend.py  test_types.py
